<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/nav_peers"
        android:icon="@drawable/ic_nav_peers"
        android:title="@string/bottom_nav_peers" />

    <item
        android:id="@+id/nav_files"
        android:icon="@drawable/ic_menu_files"
        android:title="@string/bottom_nav_files" />

    <item
        android:id="@+id/nav_ssh_sessions"
        android:icon="@drawable/ic_nav_ssh"
        android:title="@string/bottom_nav_ssh" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/bottom_nav_settings" />

</menu>
