<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="io.netbird.client.ui.home.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_peers"
        android:name="io.netbird.client.ui.home.PeersFragment"
        android:label="@string/bottom_nav_peers"
        tools:layout="@layout/fragment_peers" />

    <fragment
        android:id="@+id/nav_peer_detail"
        android:name="io.netbird.client.ui.home.PeerDetailFragment"
        android:label="@string/peer_detail_title"
        tools:layout="@layout/fragment_peer_detail" />

    <fragment
        android:id="@+id/nav_networks"
        android:name="io.netbird.client.ui.home.NetworksFragment"
        android:label="@string/bottom_nav_networks"
        tools:layout="@layout/fragment_networks" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="io.netbird.client.ui.settings.SettingsFragment"
        android:label="@string/bottom_nav_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_advanced"
        android:name="io.netbird.client.ui.advanced.AdvancedFragment"
        android:label="@string/menu_advanced"
        tools:layout="@layout/fragment_advanced" />

    <fragment
        android:id="@+id/nav_troubleshoot"
        android:name="io.netbird.client.ui.troubleshoot.TroubleshootFragment"
        android:label="@string/menu_troubleshoot"
        tools:layout="@layout/fragment_troubleshoot" />

    <fragment
        android:id="@+id/nav_about"
        android:name="io.netbird.client.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_profiles"
        android:name="io.netbird.client.ui.profile.ProfilesFragment"
        android:label="@string/menu_profiles"
        tools:layout="@layout/fragment_profiles" />

    <fragment
        android:id="@+id/firstInstallFragment"
        android:name="io.netbird.client.ui.fistinstall.FirstInstallFragment"
        android:label="FirstInstall"
        tools:layout="@layout/fragment_firstinstall" />
</navigation>
