<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/zeroPeerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@color/nb_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_peers_empty"
        android:src="@drawable/empty_box"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/nb_txt_light"
        android:text="@string/zero_peers_no_machines"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_learn_why"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zero_peers_btn_learn_why"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:textColor="@color/white" />
</LinearLayout>